[Edit] License, CI/CD and Tests (#12)