@@ -20,10 +20,13 @@ object Build extends AutoPlugin {
     )
 
   override def projectSettings: Seq[Setting[_]] = Seq(
-    organization       := "com.neoris.hcr.sdk",
+    organization       := "io.github.rafafrdz",
     scalaVersion       := Version.Scala,
     crossScalaVersions := Vector(scalaVersion.value),
-    javacOptions       := Seq("-g:none"),
+    javacOptions := Seq(
+      "-g:none",
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+    ),
     run / javaOptions ++= localJvmSettings,
     run / fork  := true,
     Test / fork := true,
@@ -95,20 +98,27 @@ object Build extends AutoPlugin {
    */
 
   lazy val headerText: String =
-    """|Invasion Order Software License Agreement
+    """|MIT License
        |
-       |This file is part of the proprietary software provided by Invasion Order.
-       |Use of this file is governed by the terms and conditions outlined in the
-       |Invasion Order Software License Agreement.
+       |Copyright (c) 2024 Rafael Fernandez
        |
-       |Unauthorized copying, modification, or distribution of this file, via any
-       |medium, is strictly prohibited. The software is provided "as is," without
-       |warranty of any kind, express or implied.
+       |Permission is hereby granted, free of charge, to any person obtaining a copy
+       |of this software and associated documentation files (the "Software"), to deal
+       |in the Software without restriction, including without limitation the rights
+       |to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+       |copies of the Software, and to permit persons to whom the Software is
+       |furnished to do so, subject to the following conditions:
        |
-       |For the full license text, please refer to the LICENSE file included
-       |with this distribution, or contact Invasion Order at contact@iorder.dev.
+       |The above copyright notice and this permission notice shall be included in all
+       |copies or substantial portions of the Software.
        |
-       |(c) 2024 Invasion Order. All rights reserved.
+       |THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+       |IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+       |FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+       |AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+       |LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+       |OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+       |SOFTWARE.
        |""".stripMargin
 
   lazy val headerIOLicense: License.Custom =
